--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -26,7 +26,7 @@
       </p>
 
       <div class="buttons is-centered">
-        <a class="button is-medium is-light-green has-text-weight-bold">
+        <a class="button is-medium is-light-green has-text-weight-bold" href="https://docs.nats.io/whats-new">
           Learn more
         </a>
       </div>
