--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,9 +2,25 @@
 {{ $color    := cond .IsHome "white-bis" "black" }}
 {{ $year     := now.Year }}
 <footer class="footer has-background-{{ $bgColor }} has-text-{{ $color }}">
-  <div class="container has-text-centered">
-    <p class="has-text-weight-medium">
-      Copyright &copy; NATS Authors {{ $year }}
-    </p>
-  </div>
+  <section class="section">
+    <div class="container">
+      <div class="columns">
+        <div class="column">
+
+        </div>
+
+        <div class="column">
+          {{ partial "social-buttons.html" (dict "align" "right") }}
+        </div>
+      </div>
+    </div>
+
+    <br />
+
+    <div class="container has-text-centered">
+      <p class="has-text-weight-medium">
+        Copyright &copy; NATS Authors {{ $year }}
+      </p>
+    </div>
+  </section>
 </footer>
