--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -31,6 +31,10 @@
           {{ end }}
         </a>
         {{ end }}
+
+        <div class="navbar-item">
+          {{ partial "social-buttons.html" (dict) }}
+        </div>
       </div>
     </div>
   </div>
