Finish initial footer implementation
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -142,3 +142,7 @@ $colors: mergeColorMaps(("light-green": ($nats-light-green, $white), "reddit-ora
     width: 90%
   +touch
     width: 80%
+
+.is-footer-hr
+  margin: 3rem 0
+  height: 1px
