--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -2,7 +2,7 @@
 {{ $home  := site.BaseURL }}
 {{ $menu  := site.Menus.main }}
 {{ $here  := .RelPermalink }}
-<nav class="navbar is-dark is-fixed-top is-transparent">
+<nav class="navbar is-dark is-fixed-top">
   <div class="container">
     <div class="navbar-brand">
       <a class="navbar-item" href="{{ $home }}">
