--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -38,6 +38,14 @@ $nats-colors: ("nats-blue": $nats-blue, "nats-green": $nats-green, "nats-dark-bl
 @import "bulma/sass/utilities/initial-variables"
 @import "bulma/sass/utilities/functions"
 
+// Bulma-specific overrides
+$primary: $nats-blue
+$link: $primary
+$dark: $nats-dark
+$navbar-height: 4rem
+$navbar-item-hover-color: $nats-light-green !important
+$navbar-item-hover-background-color: $dark !important
+
 // Font overrides
 {{ if $fonts }}
 // Sans-serif font
@@ -50,12 +58,6 @@ $family-sans-serif: "{{ . }}", BlinkMacSystemFont, -apple-system, "Segoe UI", "R
 $family-monospace: "{{ . }}", monospace
 {{ end }}
 {{ end }}
-
-// Bulma-specific overrides
-$primary: $nats-blue
-$link: $primary
-$dark: $nats-dark
-$navbar-height: 4rem
 
 // Final Bulma imports
 @import "bulma/sass/utilities/derived-variables"
