adding new quotes to community page

--- a/layouts/partials/quotes.html
+++ b/layouts/partials/quotes.html
@@ -14,6 +14,10 @@
       <li data-target="#quote-carousel" data-slide-to="9"></li>
       <li data-target="#quote-carousel" data-slide-to="10"></li>
       <li data-target="#quote-carousel" data-slide-to="11"></li>
+      <li data-target="#quote-carousel" data-slide-to="12"></li>
+      <li data-target="#quote-carousel" data-slide-to="13"></li>
+      <li data-target="#quote-carousel" data-slide-to="14"></li>
+      <li data-target="#quote-carousel" data-slide-to="15"></li>
     </ol>
     <!-- Wrapper for slides -->
     <ul class="carousel-inner" role="listbox">
@@ -41,6 +45,15 @@
             <p class="lead">"NATS resonated with us because of its simplicity. We found the overhead of the team learning and configuring Rabbitmq to be a pain. This resulted in difficult debugging and testing. So, before developing any more services on top of rabbitmq, we decided to have a look around for different solutions, and decided NATS was the right solution for us."</p>
             <a class="quote-logo" href="http://happyinspector.com" target="_blank"><img src="/img/user_logos/happyco.png" alt="Happyco"></a>
             <p><strong>&mdash;Andrew Mackenzie-Ross, CTO at HappyCo</strong></p>
+          </div>
+        </div>
+      </li>
+      <li class="item">
+        <div class="quote-con">
+          <div class="quote-inner">
+            <p class="lead"><img src="/img/social-icons/twitter-lrg-icon.png" height="40" width="40" alt="twitter">"NATS is one of my favorite and best technologies I've ever encountered. It allowed @pex to grow in ways we couldn't dream before. I find myself recommending it quite often."</p>
+            <a class="quote-logo" href="https://www.pex.com/" target="_blank"><img src="/img/user_logos/pex_logo.png" alt="Pex"></a>
+            <p><strong>&mdash;Rasty  Turek, CEO at Pex</strong></p>
           </div>
         </div>
       </li>
@@ -91,6 +104,15 @@
       <li class="item">
         <div class="quote-con">
           <div class="quote-inner">
+            <p class="lead"><img src="/img/social-icons/twitter-lrg-icon.png" height="40" width="40" alt="twitter">"my new favorite thing: @nats_io... amazing tech, great community, vast resources ... connecting all-the-things"</p>
+            <a class="quote-logo" href="https://twitter.com/jwtodd" target="_blank"><img src="/img/user_logos/james_todd.png" alt="jwtodd"></a>
+            <p><strong>&mdash;James Todd</strong></p>
+          </div>
+        </div>
+      </li>
+      <li class="item">
+        <div class="quote-con">
+          <div class="quote-inner">
             <p class="lead">"NATS enabled us to build the fastest and most scalable webRTC signaling system we’ve come across, without adding complexity due to the very simple configuration.""</p>
             <a class="quote-logo" href="http://www.greta.io/" target="_blank"><img src="/img/user_logos/gretascript.png" alt="Gretascript"></a>
             <p><strong>&mdash;Dennis Mårtensson - Founder and CTO, Gretascript</strong></p>
@@ -124,6 +146,16 @@
           </div>
         </div>
       </li>
-    </ul>
+
+      <li class="item">
+        <div class="quote-con">
+          <div class="quote-inner">
+            <p class="lead"><img src="/img/social-icons/twitter-lrg-icon.png" height="40" width="40" alt="twitter">"Building open source in the @nats_io community has been so fun. The underlying tech and design are solid and working with @crashgingerly and @ColinSullivan01 has been awesome. It feels like I'm a small part of an amazing team."</p>
+            <a class="quote-logo" href="https://twitter.com/mmmries" target="_blank"><img src="/img/user_logos/mmmries.png" alt="mmmries"></a>
+            <p><strong>&mdash;Michael Ries</strong></p>
+          </div>
+        </div>
+      </li>
+      </ul>
   </div>
 </div>
