Add client list table
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -98,7 +98,7 @@ $colors: mergeColorMaps(("light-green": ($nats-light-green, $white), "reddit-ora
 
 // Components
 // @import "bulma/sass/components/breadcrumb"
-// @import "bulma/sass/components/card"
+@import "bulma/sass/components/card"
 // @import "bulma/sass/components/dropdown"
 // @import "bulma/sass/components/level"
 // @import "bulma/sass/components/list"
@@ -148,3 +148,7 @@ $colors: mergeColorMaps(("light-green": ($nats-light-green, $white), "reddit-ora
 .is-footer-hr
   margin: 3rem 0
   height: 1px
+
+.content
+  hr
+    margin: 4rem 0
