Add download single-page template
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/layouts/shortcodes/clients.html
+++ b/layouts/shortcodes/clients.html
@@ -1,65 +1,1 @@
-{{ $releases  := site.Data.releases.Releases }}
-{{ $natsServer      := where $releases ".type" "nats-server" }}
-{{ $streamingServer := where $releases ".type" "streaming-server" }}
-{{ $natsClient      := where $releases ".type" "nats-client" }}
-{{ $streamingClient := where $releases ".type" "streaming-client" }}
-
-<div class="container">
-  <div class="columns">
-    <div class="column is-two-thirds">
-      <p class="is-size-3 has-text-weight-bold">
-        NATS
-      </p>
-
-      <div class="buttons">
-        {{ range $natsServer }}
-        {{ template "server" . }}
-        {{ end }}
-      </div>
-
-      <div class="buttons">
-        {{ range $natsClient }}
-        {{ template "client" . }}
-        {{ end }}
-      </div> 
-    </div>
-
-    <div class="column">
-      <p class="is-size-3 has-text-weight-bold">
-        NATS Streaming
-      </p>
-
-      <div class="buttons">
-        {{ range $streamingServer }}
-        {{ template "server" . }}
-        {{ end }}
-      </div>
-
-      <div class="buttons">
-        {{ range $streamingClient }}
-        {{ template "client" . }}
-        {{ end }}
-      </div>
-    </div>
-  </div>
-</div>
-
-{{ define "server" }}
-{{ $gh   := index .github 0 }}
-{{ $user := $gh.user }}
-{{ $repo := $gh.repo }}
-{{ $url  := printf "download/%s/%s" $user $repo | relURL }}
-<a class="button is-black is-outlined has-text-weight-bold" href="{{ $url }}">
-  {{ .name }}
-</a>
-{{ end }}
-
-{{ define "client" }}
-{{ $gh   := index .github 0 }}
-{{ $user := $gh.user }}
-{{ $repo := $gh.repo }}
-{{ $url  := printf "download/%s/%s" $user $repo | relURL }}
-<a class="button is-primary is-outlined has-text-weight-bold" href="{{ $url }}">
-  {{ .name }}
-</a>
-{{ end }}
+{{ partial "download/clients.html" . }}
