--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,9 +1,17 @@
-<section class="hero is-dark">
+{{ $title := .Title }}
+{{ $desc  := .Params.description }}
+<section class="hero is-medium is-dark">
   <div class="hero-body">
     <div class="container">
-      <p class="title is-size-1 is-size-2-mobile has-text-weight-medium">
-        {{ .Title }}
+      <p class="title is-size-1 is-size-2-mobile has-text-weight-medium{{ if $desc }} is-spaced{{ end }}">
+        {{ $title }}
       </p>
+
+      {{ with $desc }}
+      <p class="subtitle is-size-3 is-size-4-mobile">
+        {{ . | markdownify }}
+      </p>
+      {{ end }}
     </div>
   </div>
 </section>
