Add community page
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -111,6 +111,9 @@ $colors: mergeColorMaps(("light-green": ($nats-light-green, $white), "reddit-ora
 // @import "bulma/sass/components/panel"
 // @import "bulma/sass/components/tabs"
 
+.is-constrained
+  max-width: 90ch
+
 .is-page
   display: flex
   flex-direction: column
