Add Contributing page
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -41,6 +41,8 @@ $nats-colors: ("nats-blue": $nats-blue, "nats-green": $nats-green, "nats-dark-bl
 // Bulma-specific overrides
 $primary: $nats-blue
 $link: $primary
+$code: $nats-dark-blue
+$code-background: $white-bis
 $dark: $nats-dark
 $navbar-height: 4rem
 $navbar-item-hover-color: $nats-light-green !important
