Add initial blog template
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -163,3 +163,11 @@ $colors: mergeColorMaps(("light-green": ($nats-light-green, $white), "reddit-ora
 
   hr
     margin: 4rem 0
+
+.is-sticky
+  position: sticky
+  position: -webkit-sticky
+  top: 0
+
+.card + .card
+  margin-top: 1.5rem
