--- a/layouts/partials/blog/posts.html
+++ b/layouts/partials/blog/posts.html
@@ -1,4 +1,4 @@
-{{ $posts := where site.RegularPages "Section" "blog" }}
+{{ $posts  := where site.RegularPages "Section" "blog" }}
 {{ $recent := first 10 $posts }}
 
 <section class="section">
@@ -35,6 +35,28 @@
           <p class="title">
             Categories
           </p>
+
+          <div class="buttons are-small">
+            {{ range $k, $v := site.Taxonomies.categories }}
+            <a class="button is-dark is-outlined" href="/categories/{{ $k }}">
+              {{ $k }}
+            </a>
+            {{ end }}
+          </div>
+
+          <br />
+
+          <p class="title">
+            Tags
+          </p>
+
+          <div class="buttons are-small">
+            {{ range $k, $v := site.Taxonomies.tags }}
+            <a class="button is-dark is-outlined" href="/tags/{{ $k }}">
+              {{ $k }}
+            </a>
+            {{ end }}
+          </div>
         </p>
       </div>
     </div>
