More aesthetic changes
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -13,5 +13,7 @@
   </div>
 </section>
 
-{{ partial "download/clients.html" . }}
+<section class="section">
+  {{ partial "download/clients.html" . }}
+</section>
 {{ end }}
