Shortcodes for about and privacy pages
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -155,6 +155,11 @@ $colors: mergeColorMaps(("light-green": ($nats-light-green, $white), "reddit-ora
   height: 1px
 
 .content
+  figure figcaption
+    font-size: 2rem
+    font-weight: 600
+    font-style: normal !important
+
   table tr td
     +desktop
       min-width: 20rem
