Begin clearing out unused assets
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -47,6 +47,7 @@ $dark: $nats-dark
 $navbar-height: 4rem
 $navbar-item-hover-color: $nats-light-green !important
 $navbar-item-hover-background-color: $dark !important
+$card-content-padding: 2rem
 
 // Font overrides
 {{ if $fonts }}
