--- a/layouts/partials/javascript.html
+++ b/layouts/partials/javascript.html
@@ -1,3 +1,9 @@
 {{ $app := resources.Get "js/index.js" | fingerprint }}
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="{{ $app.RelPermalink }}" integrity="{{ $app.Data.Integrity }}"></script>
+
+{{ if eq .Params.chart "true" }}
+<script>
+  window.alert("OK");
+</script>
+{{ end }}
