Add GitHub info
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
-{{ $lang := site.LanguageCode }}
-{{ $home := .IsHome }}
+{{ $lang       := site.LanguageCode }}
+{{ $isDownload := eq .Section "download" }}
 <!DOCTYPE html>
 <html{{ with $lang }} lang="{{ . }}"{{ end }}>
   <head>
@@ -10,6 +10,10 @@
     </title>
     {{ partial "css.html" . }}
     {{ partial "favicon.html" . }}
+
+    {{ if $isDownload }}
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    {{ end }}
   </head>
   <body class="is-page has-navbar-fixed-top">
     <main class="is-main">
