Add column spacing to clients list
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/layouts/partials/download/clients.html
+++ b/layouts/partials/download/clients.html
@@ -9,7 +9,7 @@
 {{ end }}
 {{ end }}
 <div class="container content">
-  <div class="columns">
+  <div class="columns is-variable is-8">
     <div class="column is-two-thirds">
       <p class="is-size-3 has-text-weight-bold">
         NATS
