Update blog aesthetic
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -85,7 +85,7 @@ $colors: mergeColorMaps(("light-green": ($nats-light-green, $white), "reddit-ora
 // @import "bulma/sass/elements/notification"
 // @import "bulma/sass/elements/progress"
 // @import "bulma/sass/elements/table"
-// @import "bulma/sass/elements/tag"
+@import "bulma/sass/elements/tag"
 @import "bulma/sass/elements/title"
 // @import "bulma/sass/elements/other"
 
@@ -185,3 +185,9 @@ $colors: mergeColorMaps(("light-green": ($nats-light-green, $white), "reddit-ora
 .card + .card
   margin-top: 1.5rem
 
+
+.has-top-margin
+  margin-top: 2rem
+
+  &-small
+    margin-top: 1rem
