--- a/layouts/partials/blog/content.html
+++ b/layouts/partials/blog/content.html
@@ -9,7 +9,7 @@
         <br />
 
         <a class="button is-dark is-outlined" href="/blog">
-          <span class="icon">
+          <span class="icon has-text-primary">
             <i class="fas fa-arrow-left"></i>
           </span>
           <span>
@@ -27,7 +27,7 @@
 
         <div class="buttons are-small">
           {{ range .Params.categories }}
-          <a class="button is-dark is-outlined" href="/categories/{{ . | lower }}">
+          <a class="button has-text-primary has-text-weight-bold is-dark is-outlined" href="/categories/{{ . | lower }}">
             {{ . }}
           </a>
           {{ end }}
@@ -41,7 +41,7 @@
 
         <div class="buttons are-small">
           {{ range .Params.tags }}
-          <a class="button is-dark is-outlined" href="/tags/{{ . | lower }}">
+          <a class="button has-text-primary has-text-weight-bold is-dark is-outlined" href="/tags/{{ . | lower }}">
             {{ . }}
           </a>
           {{ end }}
