Add brokered throughput diagram
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -192,3 +192,8 @@ $colors: mergeColorMaps(("light-green": ($nats-light-green, $white), "reddit-ora
   &-small
     margin-top: 1rem
 
+.throughput-chart
+  margin: 2rem auto 0 auto
+
+  +desktop
+    width: 70%
