--- a/layouts/shortcodes/throughput.html
+++ b/layouts/shortcodes/throughput.html
@@ -1,7 +1,9 @@
-<div class="row">
-  <div id="canvas-con" class="col-md-8 col-md-offset-2">
-    <h4 class="text-center">Brokered Throughput</h4>
-    <canvas id="throughputChart"></canvas>
-    <sub>(Chart source: <a href="https://www.bravenewgeek.com/dissecting-message-queues/" target="_blank">bravenewgeek.com/dissecting-message-queues</a>)</sub>
-  </div>
+<div class="throughput-chart has-text-centered">
+  <p class="title">
+    Brokered Throughput
+  </p>
+
+  <canvas id="throughput-chart-container"></canvas>
+  <br />
+  <sub>(Chart source: <a href="https://www.bravenewgeek.com/dissecting-message-queues/" target="_blank">bravenewgeek.com/dissecting-message-queues</a>)</sub>
 </div>
