--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,6 +24,6 @@
     </main>
 
     {{ partial "footer.html" . }}
-    {{ partial "javascript.html" }}
+    {{ partial "javascript.html" . }}
   </body>
 </html>
