--- a/layouts/shortcodes/columns.html
+++ b/layouts/shortcodes/columns.html
@@ -1,5 +1,5 @@
 <div class="container has-top-margin">
-  <div class="columns">
+  <div class="columns is-variable is-8">
     {{ .Inner }}
   </div>
 </div>
