Fix remaining broken image link
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -3,7 +3,7 @@
 <section class="hero is-medium is-dark">
   <div class="hero-body">
     <div class="container">
-      <p class="title is-size-1 is-size-2-mobile has-text-weight-medium{{ if $desc }} is-spaced{{ end }}">
+      <p class="title is-size-1 is-size-2-mobile has-text-weight-bold{{ if $desc }} is-spaced{{ end }}">
         {{ $title }}
       </p>
 
