Add alt text to blog images
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/layouts/partials/home/cncf.html
+++ b/layouts/partials/home/cncf.html
@@ -5,6 +5,6 @@
       NATS is a <a href="https://cncf.io">Cloud Native Computing Foundation</a> incubating project
     </p>
 
-    <img class="is-cncf-logo" src="{{ $img }}">
+    <img class="is-cncf-logo" src="{{ $img }}" alt="CNCF logo">
   </div>
 </section>
