--- a/layouts/partials/resources.html
+++ b/layouts/partials/resources.html
@@ -2,6 +2,7 @@
 <div id="resources" class="row">
   <div class="col-md-4">
   <ul class="list-unstyled">
+    <li><a href="/collateral/Corporate_Vision_Issue_4_2020.pdf" target="_blank" class=""><i class="fa fa-reports" aria-hidden="true"></i>Corporate Vision Issue 4 2020</a></li>
     <li><a href="/collateral/On_The_Radar_NATS.pdf" target="_blank" class=""><i class="fa fa-reports" aria-hidden="true"></i>Ovum's "On the Radar" Report</a></li>
     <li><a href="https://www.youtube.com/channel/UCi0nerPAzqPiu6nZPw9imfQ" target="_blank" class=""><i class="fa fa-youtube-play" aria-hidden="true"></i> Youtube</a></li>
     <li><a href="https://www.slideshare.net/nats_io/presentations" target="_blank" class=""><i class="fa fa-slideshare" aria-hidden="true"></i> Slideshare</a></li>
