--- a/layouts/partials/resources.html
+++ b/layouts/partials/resources.html
@@ -4,7 +4,7 @@
   <ul class="list-unstyled">
     <li><a href="/collateral/Corporate_Vision_Issue_4_2020.pdf#page=23" target="_blank" class=""><i class="fa fa-reports" aria-hidden="true"></i>Corporate Vision Issue 4 2020</a></li>
     <li><a href="/collateral/On_The_Radar_NATS.pdf" target="_blank" class=""><i class="fa fa-reports" aria-hidden="true"></i>Ovum's "On the Radar" Report</a></li>
-    <li><a href="https://www.youtube.com/channel/UCi0nerPAzqPiu6nZPw9imfQ" target="_blank" class=""><i class="fa fa-youtube-play" aria-hidden="true"></i> Youtube</a></li>
+    <li><a href="https://www.youtube.com/c/nats_messaging/videos" target="_blank" class=""><i class="fa fa-youtube-play" aria-hidden="true"></i> Youtube</a></li>
     <li><a href="https://www.slideshare.net/nats_io/presentations" target="_blank" class=""><i class="fa fa-slideshare" aria-hidden="true"></i> Slideshare</a></li>
   </ul>
   </div>
@@ -27,7 +27,7 @@
 
   <div class="col-md-4">
     <div class="embed-responsive embed-responsive-16by9">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/JHQlA_tB10c" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/G9XNApxA0UI" allowfullscreen></iframe>
     </div>
     <div class="panel panel-default">
       <div class="panel-body">
